# turkey-migration-analysis

./: pyproject.toml
data/clean/: applications_from_turkey_clean.csv  applications_to_turkey_clean.csv  decisions_from_other_countries_clean.csv  decisions_from_turkey_clean.csv
data/raw/: asylum_applications_originating_tur.csv  asylum_applications_residing_tur.csv  asylum_decisions_originating_tur.csv  asylum_decisions_residing_tur.csv
notebooks/: 01_data_exploration.ipynb  01_data_exploration_and_cleaning.ipynb  02_analysis.ipynb  03_interactive_visualization.ipynb
