[project]
name = "turkey-migration-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
]
